Commit For Generate Bank

--- a/Faza.Treasury.Data/App.config
+++ b/Faza.Treasury.Data/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=.;Initial Catalog=Mall;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="data source=(localdb)\\MSSQLLocalDB;initial catalog=Treasury2;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
