--- a/Faza.Treasury.Facade/Faza.Treasury.Facade.csproj
+++ b/Faza.Treasury.Facade/Faza.Treasury.Facade.csproj
@@ -91,11 +91,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BankController.cs" />
     <Compile Include="Filters\Authenticator.cs" />
     <Compile Include="Filters\Logger.cs" />
     <Compile Include="Mappers\AutoMapperConfig.cs" />
     <Compile Include="Mappers\AutoMapperExtensions.cs" />
+    <Compile Include="Mappers\Profiles\BankBranchProfile.cs" />
     <Compile Include="Mappers\Profiles\BankProfile.cs" />
     <Compile Include="Mappers\Profiles\__Entity__Profile.cs" />
     <Compile Include="TreasuryConfiguration.cs" />
