--- a/Faza.Treasury.Business/Faza.Treasury.Business.csproj
+++ b/Faza.Treasury.Business/Faza.Treasury.Business.csproj
@@ -76,9 +76,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AccountTypeRepository.cs" />
     <Compile Include="Repositories\BankAccountRepository.cs" />
     <Compile Include="Repositories\BankBranchRepository.cs" />
     <Compile Include="Repositories\BankRepository.cs" />
+    <Compile Include="Repositories\CurrencyTypeRepository.cs" />
     <Compile Include="Repositories\__Entity__Repository.cs" />
     <Compile Include="TreasuryBusiness.cs" />
     <Compile Include="TreasuryConfiguration.cs" />
