--- a/Faza.Treasury.Service.WebApi/Faza.Treasury.Service.WebApi.csproj
+++ b/Faza.Treasury.Service.WebApi/Faza.Treasury.Service.WebApi.csproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountTypeController.cs" />
     <Compile Include="Controllers\ApiController.cs" />
     <Compile Include="Controllers\BankAccountController.cs" />
     <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BankController.cs" />
+    <Compile Include="Controllers\CurrencyTypeController.cs" />
     <Compile Include="Controllers\__Entity__Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
