--- a/Faza.Treasury.Service.WebApi/Faza.Treasury.Service.WebApi.csproj
+++ b/Faza.Treasury.Service.WebApi/Faza.Treasury.Service.WebApi.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controllers\BankAccountController.cs" />
     <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BankController.cs" />
+    <Compile Include="Controllers\CheckController.cs" />
     <Compile Include="Controllers\CurrencyTypeController.cs" />
     <Compile Include="Controllers\__Entity__Controller.cs" />
     <Compile Include="Global.asax.cs">
